RESOLVED FIXED 118097
fourthTier: FTL::canCompile(Graph&) should not consider nodes that won't be compiled
https://bugs.webkit.org/show_bug.cgi?id=118097
Summary fourthTier: FTL::canCompile(Graph&) should not consider nodes that won't be c...
Filip Pizlo
Reported 2013-06-26 16:04:18 PDT
Patch forthcoming.
Attachments
the patch (2.12 KB, patch)
2013-06-26 16:06 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-06-26 16:06:28 PDT
Created attachment 205534 [details] the patch
Mark Hahnenberg
Comment 2 2013-06-26 16:07:46 PDT
Comment on attachment 205534 [details] the patch r=me
Filip Pizlo
Comment 3 2013-06-26 16:08:21 PDT
Note You need to log in before you can comment on or make changes to this bug.