fourthTier: FTL::canCompile(Graph&) should not consider nodes that won't be compiled https://bugs.webkit.org/show_bug.cgi?id=118097

Reviewed by Mark Hahnenberg.

This increases coverage to include programs that have unprofiled paths. Those paths will
often have nodes that appear to do untyped speculations, and the FTL sometimes doesn't
support those; except that it doesn't matter since the reason why they were untyped is
that they were unprofiled and anyway we won't run them because we'll exit before them.

* ftl/FTLCapabilities.cpp:
(JSC::FTL::canCompile):

Canonical link: https://commits.webkit.org/137037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153253 268f45cc-cd09-0410-ab3c-d52691b4dbfc